# goit-pythonweb-hw-03

./: Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml  style.css
pages/: error.html  index.html  message.html
src/: HttpServer.py  jinja2_generator.py  str_to_datetime.py  write_JSON.py
